--- a/css/layout.css
+++ b/css/layout.css
@@ -11,3 +11,8 @@ header{
     background-color: rgba(0, 0, 0, 0.9);
     box-shadow: 0px 3px 10px #ddd;
 }
+
+.cabecalho{
+    position: sticky;
+    top: 0px;
+}
